src/Dependently/Parser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.11 from src/Dependently/Parser/Parser.y
-----------------------------------------------------------------------------

state 4 contains 4 reduce/reduce conflicts.
state 6 contains 4 reduce/reduce conflicts.
state 8 contains 4 reduce/reduce conflicts.
state 22 contains 1 shift/reduce conflicts.
state 26 contains 4 shift/reduce conflicts.
state 27 contains 5 reduce/reduce conflicts.
state 30 contains 5 reduce/reduce conflicts.
state 32 contains 5 reduce/reduce conflicts.
state 33 contains 1 shift/reduce conflicts.
state 37 contains 4 shift/reduce conflicts.
state 39 contains 1 shift/reduce conflicts and 4 reduce/reduce conflicts.
state 44 contains 4 reduce/reduce conflicts.
state 56 contains 1 reduce/reduce conflicts.
state 58 contains 1 shift/reduce conflicts.
state 66 contains 1 shift/reduce conflicts and 4 reduce/reduce conflicts.
state 68 contains 1 reduce/reduce conflicts.
state 69 contains 5 reduce/reduce conflicts.
state 75 contains 1 shift/reduce conflicts.
state 81 contains 1 reduce/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parserAct -> Program                        (0)
	Program -> TermCheck                               (1)
	Program -> Command                                 (2)
	TypedParams -> OneOrMany__TypedParam__             (3)
	TypedParams -> var '::' TermCheck                  (4)
	TypedParam -> '(' var '::' TermCheck ')'           (5)
	TermInfer -> TermCheck '::' TermCheck              (6)
	TermInfer -> '*'                                   (7)
	TermInfer -> Forall                                (8)
	TermInfer -> var                                   (9)
	TermInfer -> '(' TermInfer ')'                     (10)
	TermInfer -> AppLeft OneOrMany__AppRight__         (11)
	AppLeft -> TermCheck '::' TermCheck                (12)
	AppLeft -> '*'                                     (13)
	AppLeft -> Forall                                  (14)
	AppLeft -> var                                     (15)
	AppLeft -> '(' TermInfer ')'                       (16)
	AppRight -> TermCheck '::' TermCheck               (17)
	AppRight -> '*'                                    (18)
	AppRight -> Forall                                 (19)
	AppRight -> var                                    (20)
	AppRight -> '(' TermInfer ')'                      (21)
	AppRight -> '(' lambda Params '->' TermCheck ')'   (22)
	AppRight -> '(' TermCheck ')'                      (23)
	Forall -> forall TypedParams '.' TermCheck         (24)
	Params -> OneOrMany__var__                         (25)
	TermCheck -> TermInfer                             (26)
	TermCheck -> '(' lambda Params '->' TermCheck ')'   (27)
	TermCheck -> '(' TermCheck ')'                     (28)
	Command -> assume var '::' '*'                     (29)
	Command -> assume var '::' TermCheck               (30)
	Command -> assume OneOrMany__AssumeWrapped__       (31)
	AssumeWrapped -> '(' var '::' '*' ')'              (32)
	AssumeWrapped -> '(' var '::' TermCheck ')'        (33)
	OneOrMany__AppRight__ -> AppRight NoneOrMany__AppRight__   (34)
	OneOrMany__AssumeWrapped__ -> AssumeWrapped NoneOrMany__AssumeWrapped__   (35)
	OneOrMany__TypedParam__ -> TypedParam NoneOrMany__TypedParam__   (36)
	OneOrMany__var__ -> var NoneOrMany__var__          (37)
	NoneOrMany__AppRight__ ->                          (38)
	NoneOrMany__AppRight__ -> AppRight NoneOrMany__AppRight__   (39)
	NoneOrMany__AssumeWrapped__ ->                     (40)
	NoneOrMany__AssumeWrapped__ -> AssumeWrapped NoneOrMany__AssumeWrapped__   (41)
	NoneOrMany__TypedParam__ ->                        (42)
	NoneOrMany__TypedParam__ -> TypedParam NoneOrMany__TypedParam__   (43)
	NoneOrMany__var__ ->                               (44)
	NoneOrMany__var__ -> var NoneOrMany__var__         (45)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	assume         { Tok.Assume }
	var            { Tok.Identifier $$ }
	lambda         { Tok.Lambda }
	'::'           { Tok.DoubleColon }
	'('            { Tok.LeftParen }
	')'            { Tok.RightParen }
	'*'            { Tok.Star }
	'->'           { Tok.Arrow }
	'.'            { Tok.Dot }
	forall         { Tok.Forall }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parserAct rule  0
	Program         rules 1, 2
	TypedParams     rules 3, 4
	TypedParam      rule  5
	TermInfer       rules 6, 7, 8, 9, 10, 11
	AppLeft         rules 12, 13, 14, 15, 16
	AppRight        rules 17, 18, 19, 20, 21, 22, 23
	Forall          rule  24
	Params          rule  25
	TermCheck       rules 26, 27, 28
	Command         rules 29, 30, 31
	AssumeWrapped   rules 32, 33
	OneOrMany__AppRight__ rule  34
	OneOrMany__AssumeWrapped__ rule  35
	OneOrMany__TypedParam__ rule  36
	OneOrMany__var__ rule  37
	NoneOrMany__AppRight__ rules 38, 39
	NoneOrMany__AssumeWrapped__ rules 40, 41
	NoneOrMany__TypedParam__ rules 42, 43
	NoneOrMany__var__ rules 44, 45

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	assume         shift, and enter state 12
	var            shift, and enter state 6
	'('            shift, and enter state 7
	'*'            shift, and enter state 8
	forall         shift, and enter state 9

	Program        goto state 10
	TermInfer      goto state 2
	AppLeft        goto state 3
	Forall         goto state 4
	TermCheck      goto state 5
	Command        goto state 11

State 1


	var            shift, and enter state 6
	'('            shift, and enter state 7
	'*'            shift, and enter state 8
	forall         shift, and enter state 9

	TermInfer      goto state 2
	AppLeft        goto state 3
	Forall         goto state 4
	TermCheck      goto state 5

State 2

	TermCheck -> TermInfer .                            (rule 26)

	var            reduce using rule 26
	'::'           reduce using rule 26
	'('            reduce using rule 26
	')'            reduce using rule 26
	'*'            reduce using rule 26
	'.'            reduce using rule 26
	forall         reduce using rule 26
	%eof           reduce using rule 26


State 3

	TermInfer -> AppLeft . OneOrMany__AppRight__        (rule 11)

	var            shift, and enter state 30
	'('            shift, and enter state 31
	'*'            shift, and enter state 32
	forall         shift, and enter state 9

	TermInfer      goto state 2
	AppLeft        goto state 3
	AppRight       goto state 26
	Forall         goto state 27
	TermCheck      goto state 28
	OneOrMany__AppRight__goto state 29

State 4

	TermInfer -> Forall .                               (rule 8)
	AppLeft -> Forall .                                 (rule 14)

	var            reduce using rule 14
			(reduce using rule 8)

	'::'           reduce using rule 8
	'('            reduce using rule 14
			(reduce using rule 8)

	')'            reduce using rule 8
	'*'            reduce using rule 14
			(reduce using rule 8)

	'.'            reduce using rule 8
	forall         reduce using rule 14
			(reduce using rule 8)

	%eof           reduce using rule 8


State 5

	Program -> TermCheck .                              (rule 1)
	TermInfer -> TermCheck . '::' TermCheck             (rule 6)
	AppLeft -> TermCheck . '::' TermCheck               (rule 12)

	'::'           shift, and enter state 25
	%eof           reduce using rule 1


State 6

	TermInfer -> var .                                  (rule 9)
	AppLeft -> var .                                    (rule 15)

	var            reduce using rule 15
			(reduce using rule 9)

	'::'           reduce using rule 9
	'('            reduce using rule 15
			(reduce using rule 9)

	')'            reduce using rule 9
	'*'            reduce using rule 15
			(reduce using rule 9)

	'.'            reduce using rule 9
	forall         reduce using rule 15
			(reduce using rule 9)

	%eof           reduce using rule 9


State 7

	TermInfer -> '(' . TermInfer ')'                    (rule 10)
	AppLeft -> '(' . TermInfer ')'                      (rule 16)
	TermCheck -> '(' . lambda Params '->' TermCheck ')'    (rule 27)
	TermCheck -> '(' . TermCheck ')'                    (rule 28)

	var            shift, and enter state 6
	lambda         shift, and enter state 24
	'('            shift, and enter state 7
	'*'            shift, and enter state 8
	forall         shift, and enter state 9

	TermInfer      goto state 22
	AppLeft        goto state 3
	Forall         goto state 4
	TermCheck      goto state 23

State 8

	TermInfer -> '*' .                                  (rule 7)
	AppLeft -> '*' .                                    (rule 13)

	var            reduce using rule 13
			(reduce using rule 7)

	'::'           reduce using rule 7
	'('            reduce using rule 13
			(reduce using rule 7)

	')'            reduce using rule 7
	'*'            reduce using rule 13
			(reduce using rule 7)

	'.'            reduce using rule 7
	forall         reduce using rule 13
			(reduce using rule 7)

	%eof           reduce using rule 7


State 9

	Forall -> forall . TypedParams '.' TermCheck        (rule 24)

	var            shift, and enter state 20
	'('            shift, and enter state 21

	TypedParams    goto state 17
	TypedParam     goto state 18
	OneOrMany__TypedParam__goto state 19

State 10

	%start_parserAct -> Program .                       (rule 0)

	%eof           accept


State 11

	Program -> Command .                                (rule 2)

	%eof           reduce using rule 2


State 12

	Command -> assume . var '::' '*'                    (rule 29)
	Command -> assume . var '::' TermCheck              (rule 30)
	Command -> assume . OneOrMany__AssumeWrapped__      (rule 31)

	var            shift, and enter state 15
	'('            shift, and enter state 16

	AssumeWrapped  goto state 13
	OneOrMany__AssumeWrapped__goto state 14

State 13

	OneOrMany__AssumeWrapped__ -> AssumeWrapped . NoneOrMany__AssumeWrapped__    (rule 35)

	'('            shift, and enter state 16
	%eof           reduce using rule 40

	AssumeWrapped  goto state 52
	NoneOrMany__AssumeWrapped__goto state 53

State 14

	Command -> assume OneOrMany__AssumeWrapped__ .      (rule 31)

	%eof           reduce using rule 31


State 15

	Command -> assume var . '::' '*'                    (rule 29)
	Command -> assume var . '::' TermCheck              (rule 30)

	'::'           shift, and enter state 51


State 16

	AssumeWrapped -> '(' . var '::' '*' ')'             (rule 32)
	AssumeWrapped -> '(' . var '::' TermCheck ')'       (rule 33)

	var            shift, and enter state 50


State 17

	Forall -> forall TypedParams . '.' TermCheck        (rule 24)

	'.'            shift, and enter state 49


State 18

	OneOrMany__TypedParam__ -> TypedParam . NoneOrMany__TypedParam__    (rule 36)

	'('            shift, and enter state 21
	'.'            reduce using rule 42

	TypedParam     goto state 47
	NoneOrMany__TypedParam__goto state 48

State 19

	TypedParams -> OneOrMany__TypedParam__ .            (rule 3)

	'.'            reduce using rule 3


State 20

	TypedParams -> var . '::' TermCheck                 (rule 4)

	'::'           shift, and enter state 46


State 21

	TypedParam -> '(' . var '::' TermCheck ')'          (rule 5)

	var            shift, and enter state 45


State 22

	TermInfer -> '(' TermInfer . ')'                    (rule 10)
	AppLeft -> '(' TermInfer . ')'                      (rule 16)
	TermCheck -> TermInfer .                            (rule 26)

	'::'           reduce using rule 26
	')'            shift, and enter state 44
			(reduce using rule 26)



State 23

	TermInfer -> TermCheck . '::' TermCheck             (rule 6)
	AppLeft -> TermCheck . '::' TermCheck               (rule 12)
	TermCheck -> '(' TermCheck . ')'                    (rule 28)

	'::'           shift, and enter state 25
	')'            shift, and enter state 43


State 24

	TermCheck -> '(' lambda . Params '->' TermCheck ')'    (rule 27)

	var            shift, and enter state 42

	Params         goto state 40
	OneOrMany__var__goto state 41

State 25

	TermInfer -> TermCheck '::' . TermCheck             (rule 6)
	AppLeft -> TermCheck '::' . TermCheck               (rule 12)

	var            shift, and enter state 6
	'('            shift, and enter state 7
	'*'            shift, and enter state 8
	forall         shift, and enter state 9

	TermInfer      goto state 2
	AppLeft        goto state 3
	Forall         goto state 4
	TermCheck      goto state 39

State 26

	OneOrMany__AppRight__ -> AppRight . NoneOrMany__AppRight__    (rule 34)

	var            shift, and enter state 30
			(reduce using rule 38)

	'::'           reduce using rule 38
	'('            shift, and enter state 31
			(reduce using rule 38)

	')'            reduce using rule 38
	'*'            shift, and enter state 32
			(reduce using rule 38)

	'.'            reduce using rule 38
	forall         shift, and enter state 9
			(reduce using rule 38)

	%eof           reduce using rule 38

	TermInfer      goto state 2
	AppLeft        goto state 3
	AppRight       goto state 37
	Forall         goto state 27
	TermCheck      goto state 28
	NoneOrMany__AppRight__goto state 38

State 27

	TermInfer -> Forall .                               (rule 8)
	AppLeft -> Forall .                                 (rule 14)
	AppRight -> Forall .                                (rule 19)

	var            reduce using rule 19
			(reduce using rule 14)

	'::'           reduce using rule 19
			(reduce using rule 8)

	'('            reduce using rule 19
			(reduce using rule 14)

	')'            reduce using rule 19
	'*'            reduce using rule 19
			(reduce using rule 14)

	'.'            reduce using rule 19
	forall         reduce using rule 19
			(reduce using rule 14)

	%eof           reduce using rule 19


State 28

	TermInfer -> TermCheck . '::' TermCheck             (rule 6)
	AppLeft -> TermCheck . '::' TermCheck               (rule 12)
	AppRight -> TermCheck . '::' TermCheck              (rule 17)

	'::'           shift, and enter state 36


State 29

	TermInfer -> AppLeft OneOrMany__AppRight__ .        (rule 11)

	var            reduce using rule 11
	'::'           reduce using rule 11
	'('            reduce using rule 11
	')'            reduce using rule 11
	'*'            reduce using rule 11
	'.'            reduce using rule 11
	forall         reduce using rule 11
	%eof           reduce using rule 11


State 30

	TermInfer -> var .                                  (rule 9)
	AppLeft -> var .                                    (rule 15)
	AppRight -> var .                                   (rule 20)

	var            reduce using rule 20
			(reduce using rule 15)

	'::'           reduce using rule 20
			(reduce using rule 9)

	'('            reduce using rule 20
			(reduce using rule 15)

	')'            reduce using rule 20
	'*'            reduce using rule 20
			(reduce using rule 15)

	'.'            reduce using rule 20
	forall         reduce using rule 20
			(reduce using rule 15)

	%eof           reduce using rule 20


State 31

	TermInfer -> '(' . TermInfer ')'                    (rule 10)
	AppLeft -> '(' . TermInfer ')'                      (rule 16)
	AppRight -> '(' . TermInfer ')'                     (rule 21)
	AppRight -> '(' . lambda Params '->' TermCheck ')'    (rule 22)
	AppRight -> '(' . TermCheck ')'                     (rule 23)
	TermCheck -> '(' . lambda Params '->' TermCheck ')'    (rule 27)
	TermCheck -> '(' . TermCheck ')'                    (rule 28)

	var            shift, and enter state 6
	lambda         shift, and enter state 35
	'('            shift, and enter state 7
	'*'            shift, and enter state 8
	forall         shift, and enter state 9

	TermInfer      goto state 33
	AppLeft        goto state 3
	Forall         goto state 4
	TermCheck      goto state 34

State 32

	TermInfer -> '*' .                                  (rule 7)
	AppLeft -> '*' .                                    (rule 13)
	AppRight -> '*' .                                   (rule 18)

	var            reduce using rule 18
			(reduce using rule 13)

	'::'           reduce using rule 18
			(reduce using rule 7)

	'('            reduce using rule 18
			(reduce using rule 13)

	')'            reduce using rule 18
	'*'            reduce using rule 18
			(reduce using rule 13)

	'.'            reduce using rule 18
	forall         reduce using rule 18
			(reduce using rule 13)

	%eof           reduce using rule 18


State 33

	TermInfer -> '(' TermInfer . ')'                    (rule 10)
	AppLeft -> '(' TermInfer . ')'                      (rule 16)
	AppRight -> '(' TermInfer . ')'                     (rule 21)
	TermCheck -> TermInfer .                            (rule 26)

	'::'           reduce using rule 26
	')'            shift, and enter state 69
			(reduce using rule 26)



State 34

	TermInfer -> TermCheck . '::' TermCheck             (rule 6)
	AppLeft -> TermCheck . '::' TermCheck               (rule 12)
	AppRight -> '(' TermCheck . ')'                     (rule 23)
	TermCheck -> '(' TermCheck . ')'                    (rule 28)

	'::'           shift, and enter state 25
	')'            shift, and enter state 68


State 35

	AppRight -> '(' lambda . Params '->' TermCheck ')'    (rule 22)
	TermCheck -> '(' lambda . Params '->' TermCheck ')'    (rule 27)

	var            shift, and enter state 42

	Params         goto state 67
	OneOrMany__var__goto state 41

State 36

	TermInfer -> TermCheck '::' . TermCheck             (rule 6)
	AppLeft -> TermCheck '::' . TermCheck               (rule 12)
	AppRight -> TermCheck '::' . TermCheck              (rule 17)

	var            shift, and enter state 6
	'('            shift, and enter state 7
	'*'            shift, and enter state 8
	forall         shift, and enter state 9

	TermInfer      goto state 2
	AppLeft        goto state 3
	Forall         goto state 4
	TermCheck      goto state 66

State 37

	NoneOrMany__AppRight__ -> AppRight . NoneOrMany__AppRight__    (rule 39)

	var            shift, and enter state 30
			(reduce using rule 38)

	'::'           reduce using rule 38
	'('            shift, and enter state 31
			(reduce using rule 38)

	')'            reduce using rule 38
	'*'            shift, and enter state 32
			(reduce using rule 38)

	'.'            reduce using rule 38
	forall         shift, and enter state 9
			(reduce using rule 38)

	%eof           reduce using rule 38

	TermInfer      goto state 2
	AppLeft        goto state 3
	AppRight       goto state 37
	Forall         goto state 27
	TermCheck      goto state 28
	NoneOrMany__AppRight__goto state 65

State 38

	OneOrMany__AppRight__ -> AppRight NoneOrMany__AppRight__ .    (rule 34)

	var            reduce using rule 34
	'::'           reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	'*'            reduce using rule 34
	'.'            reduce using rule 34
	forall         reduce using rule 34
	%eof           reduce using rule 34


State 39

	TermInfer -> TermCheck . '::' TermCheck             (rule 6)
	TermInfer -> TermCheck '::' TermCheck .             (rule 6)
	AppLeft -> TermCheck . '::' TermCheck               (rule 12)
	AppLeft -> TermCheck '::' TermCheck .               (rule 12)

	var            reduce using rule 12
			(reduce using rule 6)

	'::'           shift, and enter state 25
			(reduce using rule 6)

	'('            reduce using rule 12
			(reduce using rule 6)

	')'            reduce using rule 6
	'*'            reduce using rule 12
			(reduce using rule 6)

	'.'            reduce using rule 6
	forall         reduce using rule 12
			(reduce using rule 6)

	%eof           reduce using rule 6


State 40

	TermCheck -> '(' lambda Params . '->' TermCheck ')'    (rule 27)

	'->'           shift, and enter state 64


State 41

	Params -> OneOrMany__var__ .                        (rule 25)

	'->'           reduce using rule 25


State 42

	OneOrMany__var__ -> var . NoneOrMany__var__         (rule 37)

	var            shift, and enter state 63
	'->'           reduce using rule 44

	NoneOrMany__var__goto state 62

State 43

	TermCheck -> '(' TermCheck ')' .                    (rule 28)

	var            reduce using rule 28
	'::'           reduce using rule 28
	'('            reduce using rule 28
	')'            reduce using rule 28
	'*'            reduce using rule 28
	'.'            reduce using rule 28
	forall         reduce using rule 28
	%eof           reduce using rule 28


State 44

	TermInfer -> '(' TermInfer ')' .                    (rule 10)
	AppLeft -> '(' TermInfer ')' .                      (rule 16)

	var            reduce using rule 16
			(reduce using rule 10)

	'::'           reduce using rule 10
	'('            reduce using rule 16
			(reduce using rule 10)

	')'            reduce using rule 10
	'*'            reduce using rule 16
			(reduce using rule 10)

	'.'            reduce using rule 10
	forall         reduce using rule 16
			(reduce using rule 10)

	%eof           reduce using rule 10


State 45

	TypedParam -> '(' var . '::' TermCheck ')'          (rule 5)

	'::'           shift, and enter state 61


State 46

	TypedParams -> var '::' . TermCheck                 (rule 4)

	var            shift, and enter state 6
	'('            shift, and enter state 7
	'*'            shift, and enter state 8
	forall         shift, and enter state 9

	TermInfer      goto state 2
	AppLeft        goto state 3
	Forall         goto state 4
	TermCheck      goto state 60

State 47

	NoneOrMany__TypedParam__ -> TypedParam . NoneOrMany__TypedParam__    (rule 43)

	'('            shift, and enter state 21
	'.'            reduce using rule 42

	TypedParam     goto state 47
	NoneOrMany__TypedParam__goto state 59

State 48

	OneOrMany__TypedParam__ -> TypedParam NoneOrMany__TypedParam__ .    (rule 36)

	'.'            reduce using rule 36


State 49

	Forall -> forall TypedParams '.' . TermCheck        (rule 24)

	var            shift, and enter state 6
	'('            shift, and enter state 7
	'*'            shift, and enter state 8
	forall         shift, and enter state 9

	TermInfer      goto state 2
	AppLeft        goto state 3
	Forall         goto state 4
	TermCheck      goto state 58

State 50

	AssumeWrapped -> '(' var . '::' '*' ')'             (rule 32)
	AssumeWrapped -> '(' var . '::' TermCheck ')'       (rule 33)

	'::'           shift, and enter state 57


State 51

	Command -> assume var '::' . '*'                    (rule 29)
	Command -> assume var '::' . TermCheck              (rule 30)

	var            shift, and enter state 6
	'('            shift, and enter state 7
	'*'            shift, and enter state 56
	forall         shift, and enter state 9

	TermInfer      goto state 2
	AppLeft        goto state 3
	Forall         goto state 4
	TermCheck      goto state 55

State 52

	NoneOrMany__AssumeWrapped__ -> AssumeWrapped . NoneOrMany__AssumeWrapped__    (rule 41)

	'('            shift, and enter state 16
	%eof           reduce using rule 40

	AssumeWrapped  goto state 52
	NoneOrMany__AssumeWrapped__goto state 54

State 53

	OneOrMany__AssumeWrapped__ -> AssumeWrapped NoneOrMany__AssumeWrapped__ .    (rule 35)

	%eof           reduce using rule 35


State 54

	NoneOrMany__AssumeWrapped__ -> AssumeWrapped NoneOrMany__AssumeWrapped__ .    (rule 41)

	%eof           reduce using rule 41


State 55

	TermInfer -> TermCheck . '::' TermCheck             (rule 6)
	AppLeft -> TermCheck . '::' TermCheck               (rule 12)
	Command -> assume var '::' TermCheck .              (rule 30)

	'::'           shift, and enter state 25
	%eof           reduce using rule 30


State 56

	TermInfer -> '*' .                                  (rule 7)
	AppLeft -> '*' .                                    (rule 13)
	Command -> assume var '::' '*' .                    (rule 29)

	var            reduce using rule 13
	'::'           reduce using rule 7
	'('            reduce using rule 13
	'*'            reduce using rule 13
	forall         reduce using rule 13
	%eof           reduce using rule 29
			(reduce using rule 7)



State 57

	AssumeWrapped -> '(' var '::' . '*' ')'             (rule 32)
	AssumeWrapped -> '(' var '::' . TermCheck ')'       (rule 33)

	var            shift, and enter state 6
	'('            shift, and enter state 7
	'*'            shift, and enter state 75
	forall         shift, and enter state 9

	TermInfer      goto state 2
	AppLeft        goto state 3
	Forall         goto state 4
	TermCheck      goto state 74

State 58

	TermInfer -> TermCheck . '::' TermCheck             (rule 6)
	AppLeft -> TermCheck . '::' TermCheck               (rule 12)
	Forall -> forall TypedParams '.' TermCheck .        (rule 24)

	var            reduce using rule 24
	'::'           shift, and enter state 25
			(reduce using rule 24)

	'('            reduce using rule 24
	')'            reduce using rule 24
	'*'            reduce using rule 24
	'.'            reduce using rule 24
	forall         reduce using rule 24
	%eof           reduce using rule 24


State 59

	NoneOrMany__TypedParam__ -> TypedParam NoneOrMany__TypedParam__ .    (rule 43)

	'.'            reduce using rule 43


State 60

	TypedParams -> var '::' TermCheck .                 (rule 4)
	TermInfer -> TermCheck . '::' TermCheck             (rule 6)
	AppLeft -> TermCheck . '::' TermCheck               (rule 12)

	'::'           shift, and enter state 25
	'.'            reduce using rule 4


State 61

	TypedParam -> '(' var '::' . TermCheck ')'          (rule 5)

	var            shift, and enter state 6
	'('            shift, and enter state 7
	'*'            shift, and enter state 8
	forall         shift, and enter state 9

	TermInfer      goto state 2
	AppLeft        goto state 3
	Forall         goto state 4
	TermCheck      goto state 73

State 62

	OneOrMany__var__ -> var NoneOrMany__var__ .         (rule 37)

	'->'           reduce using rule 37


State 63

	NoneOrMany__var__ -> var . NoneOrMany__var__        (rule 45)

	var            shift, and enter state 63
	'->'           reduce using rule 44

	NoneOrMany__var__goto state 72

State 64

	TermCheck -> '(' lambda Params '->' . TermCheck ')'    (rule 27)

	var            shift, and enter state 6
	'('            shift, and enter state 7
	'*'            shift, and enter state 8
	forall         shift, and enter state 9

	TermInfer      goto state 2
	AppLeft        goto state 3
	Forall         goto state 4
	TermCheck      goto state 71

State 65

	NoneOrMany__AppRight__ -> AppRight NoneOrMany__AppRight__ .    (rule 39)

	var            reduce using rule 39
	'::'           reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'.'            reduce using rule 39
	forall         reduce using rule 39
	%eof           reduce using rule 39


State 66

	TermInfer -> TermCheck . '::' TermCheck             (rule 6)
	TermInfer -> TermCheck '::' TermCheck .             (rule 6)
	AppLeft -> TermCheck . '::' TermCheck               (rule 12)
	AppLeft -> TermCheck '::' TermCheck .               (rule 12)
	AppRight -> TermCheck '::' TermCheck .              (rule 17)

	var            reduce using rule 17
			(reduce using rule 12)

	'::'           shift, and enter state 25
			(reduce using rule 17)
			(reduce using rule 6)

	'('            reduce using rule 17
			(reduce using rule 12)

	')'            reduce using rule 17
	'*'            reduce using rule 17
			(reduce using rule 12)

	'.'            reduce using rule 17
	forall         reduce using rule 17
			(reduce using rule 12)

	%eof           reduce using rule 17


State 67

	AppRight -> '(' lambda Params . '->' TermCheck ')'    (rule 22)
	TermCheck -> '(' lambda Params . '->' TermCheck ')'    (rule 27)

	'->'           shift, and enter state 70


State 68

	AppRight -> '(' TermCheck ')' .                     (rule 23)
	TermCheck -> '(' TermCheck ')' .                    (rule 28)

	var            reduce using rule 23
	'::'           reduce using rule 28
			(reduce using rule 23)

	'('            reduce using rule 23
	')'            reduce using rule 23
	'*'            reduce using rule 23
	'.'            reduce using rule 23
	forall         reduce using rule 23
	%eof           reduce using rule 23


State 69

	TermInfer -> '(' TermInfer ')' .                    (rule 10)
	AppLeft -> '(' TermInfer ')' .                      (rule 16)
	AppRight -> '(' TermInfer ')' .                     (rule 21)

	var            reduce using rule 21
			(reduce using rule 16)

	'::'           reduce using rule 21
			(reduce using rule 10)

	'('            reduce using rule 21
			(reduce using rule 16)

	')'            reduce using rule 21
	'*'            reduce using rule 21
			(reduce using rule 16)

	'.'            reduce using rule 21
	forall         reduce using rule 21
			(reduce using rule 16)

	%eof           reduce using rule 21


State 70

	AppRight -> '(' lambda Params '->' . TermCheck ')'    (rule 22)
	TermCheck -> '(' lambda Params '->' . TermCheck ')'    (rule 27)

	var            shift, and enter state 6
	'('            shift, and enter state 7
	'*'            shift, and enter state 8
	forall         shift, and enter state 9

	TermInfer      goto state 2
	AppLeft        goto state 3
	Forall         goto state 4
	TermCheck      goto state 80

State 71

	TermInfer -> TermCheck . '::' TermCheck             (rule 6)
	AppLeft -> TermCheck . '::' TermCheck               (rule 12)
	TermCheck -> '(' lambda Params '->' TermCheck . ')'    (rule 27)

	'::'           shift, and enter state 25
	')'            shift, and enter state 79


State 72

	NoneOrMany__var__ -> var NoneOrMany__var__ .        (rule 45)

	'->'           reduce using rule 45


State 73

	TypedParam -> '(' var '::' TermCheck . ')'          (rule 5)
	TermInfer -> TermCheck . '::' TermCheck             (rule 6)
	AppLeft -> TermCheck . '::' TermCheck               (rule 12)

	'::'           shift, and enter state 25
	')'            shift, and enter state 78


State 74

	TermInfer -> TermCheck . '::' TermCheck             (rule 6)
	AppLeft -> TermCheck . '::' TermCheck               (rule 12)
	AssumeWrapped -> '(' var '::' TermCheck . ')'       (rule 33)

	'::'           shift, and enter state 25
	')'            shift, and enter state 77


State 75

	TermInfer -> '*' .                                  (rule 7)
	AppLeft -> '*' .                                    (rule 13)
	AssumeWrapped -> '(' var '::' '*' . ')'             (rule 32)

	var            reduce using rule 13
	'::'           reduce using rule 7
	'('            reduce using rule 13
	')'            shift, and enter state 76
			(reduce using rule 7)

	'*'            reduce using rule 13
	forall         reduce using rule 13


State 76

	AssumeWrapped -> '(' var '::' '*' ')' .             (rule 32)

	'('            reduce using rule 32
	%eof           reduce using rule 32


State 77

	AssumeWrapped -> '(' var '::' TermCheck ')' .       (rule 33)

	'('            reduce using rule 33
	%eof           reduce using rule 33


State 78

	TypedParam -> '(' var '::' TermCheck ')' .          (rule 5)

	'('            reduce using rule 5
	'.'            reduce using rule 5


State 79

	TermCheck -> '(' lambda Params '->' TermCheck ')' .    (rule 27)

	var            reduce using rule 27
	'::'           reduce using rule 27
	'('            reduce using rule 27
	')'            reduce using rule 27
	'*'            reduce using rule 27
	'.'            reduce using rule 27
	forall         reduce using rule 27
	%eof           reduce using rule 27


State 80

	TermInfer -> TermCheck . '::' TermCheck             (rule 6)
	AppLeft -> TermCheck . '::' TermCheck               (rule 12)
	AppRight -> '(' lambda Params '->' TermCheck . ')'    (rule 22)
	TermCheck -> '(' lambda Params '->' TermCheck . ')'    (rule 27)

	'::'           shift, and enter state 25
	')'            shift, and enter state 81


State 81

	AppRight -> '(' lambda Params '->' TermCheck ')' .    (rule 22)
	TermCheck -> '(' lambda Params '->' TermCheck ')' .    (rule 27)

	var            reduce using rule 22
	'::'           reduce using rule 27
			(reduce using rule 22)

	'('            reduce using rule 22
	')'            reduce using rule 22
	'*'            reduce using rule 22
	'.'            reduce using rule 22
	forall         reduce using rule 22
	%eof           reduce using rule 22


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 46
Number of terminals: 10
Number of non-terminals: 20
Number of states: 82
